--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ serde_json = "1.0"
 serde_derive = "1.0"
 reqwest = "0.9.15"
 itertools = "0.8.0"
+chrono = { version = "0.4", features = ["serde"] }
